--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zsvialov</groupId>
+    <groupId>com.zavialov</groupId>
     <artifactId>WebServer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -21,5 +21,4 @@
             <version>4.5.13</version>
         </dependency>
     </dependencies>
-
 </project>
